{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 12,
  "lineage": "a42300aa-79fa-bb1b-44ad-101eac3bfc16",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:831645032308:security-group/sg-0fbc918cf2e3869d1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fbc918cf2e3869d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load_balancer_web_security_group",
            "name_prefix": "",
            "owner_id": "831645032308",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f61597bfe7110c91"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_instances_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:831645032308:security-group/sg-077b1834f5fa192d3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-077b1834f5fa192d3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fbc918cf2e3869d1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_instances_sg",
            "name_prefix": "",
            "owner_id": "831645032308",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f61597bfe7110c91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_sg"
          ]
        }
      ]
    }
  ]
}